[gd_scene load_steps=6 format=3 uid="uid://gwv45p7kikdk"]

[ext_resource type="Script" path="res://UI/select_level.gd" id="1_4qc64"]
[ext_resource type="Texture2D" uid="uid://2cbpia7ebevc" path="res://Sprites/Menu/Tela inicial.png" id="2_ipbke"]
[ext_resource type="AudioStream" uid="uid://bvvnxca4u7aj6" path="res://Songs/menu_song.mp3" id="3_kp21u"]

[sub_resource type="InputEventKey" id="InputEventKey_1w4ap"]
device = -1
keycode = 32
unicode = 32

[sub_resource type="Shortcut" id="Shortcut_t8bt7"]
events = [SubResource("InputEventKey_1w4ap")]

[node name="Select" type="CanvasLayer"]
script = ExtResource("1_4qc64")

[node name="TelaInicial" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = ExtResource("2_ipbke")

[node name="Level_3" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = 71.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
shortcut = SubResource("Shortcut_t8bt7")
text = "Level 3"
flat = true

[node name="Level_1" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -87.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
text = "Level 1
"
flat = true

[node name="Level_2" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.0
offset_top = -22.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
shortcut = SubResource("Shortcut_t8bt7")
text = "Level 2
"
flat = true

[node name="Return" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -102.0
offset_top = -161.0
offset_right = 102.0
offset_bottom = -73.0
grow_horizontal = 2
grow_vertical = 0
text = "Return to the main menu"
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_kp21u")

[connection signal="pressed" from="Level_3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="Level_1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="Level_2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
